--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "eslint": "^8",
     "eslint-config-next": "13.5.4",
     "postcss": "^8",
+    "styled-components": "^6.0.9",
     "tailwindcss": "^3",
     "typescript": "^5"
   }
