--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@types/react-dom": "^18",
     "@types/styled-components": "^5.1.28",
     "autoprefixer": "^10",
+    "encoding": "^0.1.13",
     "eslint": "^8",
     "eslint-config-next": "13.5.4",
     "postcss": "^8",
