--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react": "^18",
     "react-dom": "^18",
     "react-i18next": "^13.3.0",
+    "react-intersection-observer": "^9.5.3",
     "sharp": "^0.32.6"
   },
   "devDependencies": {
